--- a/themes/paper/layouts/shortcodes/audio.html
+++ b/themes/paper/layouts/shortcodes/audio.html
@@ -1,4 +1,4 @@
 <audio controls>
-    <source src="{{ .Site.BaseURL }}audios/{{ .Get 0 }}.ogg" type="audio/ogg">
-    <source src="{{ .Site.BaseURL }}audios/{{ .Get 0 }}.mp3" type="audio/mpeg">
+    <source src="{{ .Site.BaseURL }}/audios/{{ .Get 0 }}.ogg" type="audio/ogg">
+    <source src="{{ .Site.BaseURL }}/audios/{{ .Get 0 }}.mp3" type="audio/mpeg">
   </audio> 
